# snake_tracer

./: .gitignore  conanfile.py
src/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Snake.cpp  Snake.hpp  SnakeTracer.cpp  SnakeTracer.hpp  main.cpp
src/glsl/: compute.glsl  fragment.glsl  vertex.glsl
